"Hello" template working

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Facebook Login JavaScript Example</title>
+<title>Spoiler Watch</title>
 <meta charset="UTF-8">
 </head>
 <body>
@@ -84,4 +84,5 @@
 </div>
 
 </body>
+<h1>Hello!</h1>
 </html>
