Python redirect working

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Spoiler Watch</title>
-<meta charset="UTF-8">
+<meta charset="UTF-8"><script src="js/main.js"></script>
 </head>
 <body>
 <script>
@@ -18,7 +18,7 @@
       document.getElementById('status').innerHTML = 'Please log ' +
         'into Facebook.';
     }
-  }
+
 
   // This function is called when someone finishes with the Login
   // Button.  See the onlogin handler attached to it in the sample
