--- a/templates/adminReg.html
+++ b/templates/adminReg.html
@@ -1,10 +1,9 @@
 {%include 'nav.html'%}
 <h2>New User</h2>
 <form action="/addAdmin" method="post">
-    Username: <input type="text" name="newUser" style="margin:5px;">
+    Username: <input type="text" name="newAdmin" style="margin:5px;">
     <br>
-    Password: <input type="text" name="newPassword" style="margin:5px">
+    Password: <input type="text" name="newAdminPassword" style="margin:5px">
     <br>
     <input class="button" type="submit" style="margin:5px">
 </form>
-
