--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -4,8 +4,9 @@
 <form action="/fileComplaint">
     <p>Submit Problem</p>
     <br>
-    <input name="complaint" style="margin:5px">
+    Report a problem you have found...
+    <input type="text" name="complaint" style="margin:5px">
     <br>
-    <button type="submit"></button>
+    <button type="submit">Submit</button>
 </form>
 </body>
