--- a/templates/editForm.html
+++ b/templates/editForm.html
@@ -1,10 +1,10 @@
 {%include 'nav.html'%}
-<h2>Edit User</h2>
+<h3 class="header">Edit User</h3>
 <form action="/editAction/{{data}}" method="post">
     Username: <input type="text" name="username">
     <br>
     Password: <input type="text" name="password">
     <br>
-    <input class="button" type="submit">
+    <input class="submit" type="submit">
 </form>
 
