--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,11 +1,11 @@
 {%include 'nav.html'%}
-<h2>Friends List</h2>
+<h3 class="header">Friends List</h3>
 {%for data in data%}
-<form action="/friendData" method="post">
+<form class="bubble" action="/friendData" method="post">
     <br>
     <p>{{data[1]}}</p>
     <br>
-    <input class="button" type="submit" value="See Shows">
+    <input class="submit" type="submit" value="See Shows">
     <input name="friend" style="display:none;" value="{{data[1]}}">
     <br>
 </form>
