--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,14 +5,14 @@
         <link href='http://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro' rel='stylesheet' type='text/css'>
         <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    </head>
-	<body>
-        <a class="nav" href="/login" >Login</a>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+        <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>    </head>
+	<body class="columns">
+        <a class="nav" href="/home">Home</a>
         <a class="nav" href="/friendForm">Add Friends</a>
         <a class="nav" href="/friends">Friends</a>
         <a class="nav" href="/shows">My Shows</a>
         <a class="nav" href="/showSearch">Add Shows</a>
         <a class="nav" href="/logout">Logout</a>
-        <h1>spoilerWatch</h1>
     </body>
 </html>
