--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -1,12 +1,11 @@
 {%include 'nav.html'%}
 <body>
-    <h1>User Home/News Feed</h1>
-<form action="/fileComplaint">
-    <p>Submit Problem</p>
+    <h3 class="header">User Home/News Feed</h3>
+<form class="medium-3 columns" action="/fileComplaint">
+    <h4 class="header">Submit Problem</h4>
     <br>
-    Report a problem you have found...
-    <input type="text" name="complaint" style="margin:5px">
+    <input value="Report a problem you have found..." type="text" name="complaint" style="margin:5px">
     <br>
-    <button type="submit">Submit</button>
+    <button class="submit" type="submit">Submit</button>
 </form>
 </body>
