--- a/templates/addFriend.html
+++ b/templates/addFriend.html
@@ -1,8 +1,8 @@
 {%include 'nav.html'%}
-<h2>Follow Friend</h2>
-<form action="/addFriend" method="post">
-    Username: <input type="text" name="Addfriend" style="margin:5px">
+<h3 class="header">Follow Friend</h3>
+<form class="medium-3 columns" action="/addFriend" method="post">
+    <input value="Friend Username" type="text" name="Addfriend" style="margin:5px">
     <br>
-    <input class="button" type="submit">
+    <input value="+ Follow" class="submit" type="submit">
 </form>
 
