--- a/templates/addUserform.html
+++ b/templates/addUserform.html
@@ -1,10 +1,10 @@
 {%include 'nav.html'%}
-<h2>New User</h2>
+<h2 class="header">New User</h2>
 <form action="/addAdmin" method="post">
     Username: <input type="text" name="newUser" style="margin:5px;">
     <br>
     Password: <input type="text" name="newPassword" style="margin:5px">
     <br>
-    <input class="button" type="submit" style="margin:5px">
+    <input class="submit" type="submit" style="margin:5px">
 </form>
 
