--- a/templates/friendData.html
+++ b/templates/friendData.html
@@ -1,10 +1,12 @@
 {%include 'nav.html'%}
-<h2>Last Episodes Watched:</h2>
+<h3 class="header">Last Episodes Watched:</h3>
 {%for show in data%}
 <br>
-<p style="margin-top:10px;font-weight:bold;">Show Title: {{show[0]}}</p>
-<p style="margin-top:10px;font-weight:bold;">Episode Title: {{show[1]}}</p>
-<p style="margin-top:10px;font-weight:bold;">Season Number: {{show[2]}}</p>
-<p style="margin-top:10px;font-weight:bold;">Episode Number: {{show[3]}}</p>
+<div class="bubble">
+    <h4 style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
+    <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
+    <p style="margin-top:10px;font-weight:bold;">Season:{{show[2]}}</p>
+    <p style="margin-top:10px;font-weight:bold;">Episode:{{show[3]}}</p>
+</div>
 {%endfor%}
 
