--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,44 @@
-{%include 'nav.html'%}
-<div id="login">
-    <h2>Login</h2>
-    <form action="/checklogin" method="post">
-        Username: <input type="text" name="username" style="margin:5px">
-        <br>
-        Password: <input type="password" name="password" style="margin:5px">
-        <br>
-        <input class="button" type="submit" style="margin:5px">
-    </form>
-</div>
-<div id="adminLogin">
-    <h2>Admin Login</h2>
-    <form action="/checkAdminLogin" method="post">
-        Username: <input type="text" name="adminUser" style="margin:5px">
-        <br>
-        Password: <input type="password" name="adminPassword" style="margin:5px">
-        <br>
-        <input class="button" type="submit" style="margin:5px">
-    </form>
-</div>
-<div id="signup">
-    <h2>Not A User?</h2>
-    <a class="button" href="/newUser">Sign Up!</a>
-</div>
-<div id="adminSignUp">
-    <h2>Admin Registration</h2>
-    <a class="button" href="/newAdmin">Register</a>
-</div>
+<html>
+<head>
+    <title>Spoiler Watch Welcome</title>
+    <link href="../../static/styles.css" rel="stylesheet" >
+    <link href='http://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+    <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
+</head>
+<body>
+    <div class="medium-12 columns">
+        <div class="medium-2 columns">
+            <h2 class="header">Login</h2>
+            <form action="/checklogin" method="post">
+                Username: <input type="text" name="username" style="margin:5px">
+                <br>
+                Password: <input type="password" name="password" style="margin:5px">
+                <br>
+                <input class="submit" type="submit" style="margin:5px">
+            </form>
+            <h2 class="header">Not A User?</h2>
+            <a class="submit" href="/newUser">Sign Up!</a>
+        </div>
+        <div class="medium-6 columns">
+            <h2 class="header">What is Spoiler Watch</h2>
+            <p>Spoiler Watch is an app about stuff and things.</p>
+        </div>
+    </div>
+    <div class="medium-12 columns">
+        <h2 class="header">Admin Login</h2>
+        <form action="/checkAdminLogin" method="post" class="medium-6 columns">
+            Username: <input type="text" name="adminUser" style="margin:5px">
+            <br>
+            Password: <input type="password" name="adminPassword" style="margin:5px">
+            <br>
+            <input class="submit" type="submit" style="margin:5px">
+        </form>
+        <h2 class="header">Admin Registration</h2>
+        <a class="submit" href="/newAdmin">Register</a>
+    </div>
+</body>
+</html>
 
