--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -1,10 +1,10 @@
 {%include 'nav.html'%}
-<h2>Show Search</h2>
-<form action="/parseJSON" method="post">
-    Title: <input name="title">
-    Season: <input name="season" type="tel">
-    Episode: <input name="episode" type="tel">
+<h3 class="header">Show Search</h3>
+<form class="medium-3 columns" action="/parseJSON" method="post">
+    <input value="Show Title" name="title">
+    <input value="Season" name="season">
+    <input value="Episode" name="episode">
     <br>
-    <input class="button" type="submit" style="margin:15px" value="Add Show">
+    <input class="submit" type="submit" style="margin:15px" value="Add Show">
 </form>
 
