--- a/templates/shows.html
+++ b/templates/shows.html
@@ -1,24 +1,24 @@
 {%include 'nav.html'%}
-<h2>Last Episodes Watched:</h2>
+<h3 class="header">Last Episodes Watched:</h3>
 {%for show in showdata%}
-<form action="/deleteShow" method="post">
+<form class="bubble" action="/deleteShow" method="post">
     <br>
-    <p style="margin-top:10px;font-weight:bold;">Show Title: {{show[0]}}</p>
-    <p style="margin-top:10px;font-weight:bold;">Episode Title: {{show[1]}}</p>
-    <p style="margin-top:10px;font-weight:bold;">Season Number: {{show[2]}}</p>
-    <p style="margin-top:10px;font-weight:bold;">Episode Number: {{show[3]}}</p>
+    <h4 style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
+    <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
+    <p style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
+    <p style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
     <input name="random" style="display:none;" value="{{show[0]}}">
-    <input class="button" type="submit" value="Delete">
+    <input class="submit" type="submit" value="Delete">
 </form>
 
-<h2>Update Shows</h2>
-<form action="/updateShow" method="post">
-    Show: <input name="show">
-    Title: <input name="title">
-    Season: <input name="season" type="tel">
-    Episode: <input name="episode" type="tel">
-    <br>
-    <input class="button" type="submit" style="margin:15px" value="Add Show">
-</form>
 {%endfor%}
+<h3 class="header">Update Shows</h3>
+<form class="medium-4 columns" action="/updateShow" method="post">
+    <input value="Show Title" name="show">
+    <input value="Episode Title" name="title">
+    <input value="Season Number" name="season">
+    <input value="Episode Number" name="episode">
+    <br>
+    <input class="submit" type="submit" style="margin:15px" value="Update Show">
+</form>
 
