Foundation + Gallery view for shows

--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -1,9 +1,9 @@
 {%include 'nav.html'%}
 <h3 class="header">Show Search</h3>
 <form class="medium-3 columns" action="/parseJSON" method="post">
-    <input value="Show Title" name="title">
-    <input value="Season" name="season">
-    <input value="Episode" name="episode">
+    <input placeholder="Show Title" name="title">
+    <input placeholder="Season" name="season">
+    <input placeholder="Episode" name="episode">
     <br>
     <input class="submit" type="submit" style="margin:15px" value="Add Show">
 </form>
