--- a/templates/friendData.html
+++ b/templates/friendData.html
@@ -2,7 +2,7 @@
 <h3 class="header">Last Episodes Watched:</h3>
 {%for show in data%}
 <br>
-<div class="bubble">
+<div class="medium-4 columns bubble">
     <h4 style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
     <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
     <p style="margin-top:10px;font-weight:bold;">Season:{{show[2]}}</p>
