--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,7 +1,7 @@
 {%include 'nav.html'%}
 <h3 class="header">Friends List</h3>
 {%for data in data%}
-<form class="bubble" action="/friendData" method="post">
+<form class="bubble medium-2 columns" action="/friendData" method="post">
     <br>
     <p>{{data[1]}}</p>
     <br>
