--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,12 +7,12 @@
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
         <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>    </head>
-	<body class="columns">
+	<body style="background-color: #f4eade;" class="columns">
         <a class="nav" href="/home">Home</a>
         <a class="nav" href="/friendForm">Add Friends</a>
         <a class="nav" href="/friends">Friends</a>
         <a class="nav" href="/shows">My Shows</a>
         <a class="nav" href="/showSearch">Add Shows</a>
-        <a class="nav" href="/logout">Logout</a>
+        <a class="nav" id="logout" href="/logout">Logout</a>
     </body>
 </html>
