--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -1,6 +1,6 @@
 {%include 'nav.html'%}
-<h3 class="header">Show Search</h3>
-<form class="medium-3 columns" action="/parseJSON" method="post">
+<h3 class="header">Add A Show</h3>
+<form class="medium-2 columns" action="/parseJSON" method="post">
     <input placeholder="Show Title" name="title">
     <input placeholder="Season" name="season">
     <input placeholder="Episode" name="episode">
