--- a/templates/shows.html
+++ b/templates/shows.html
@@ -14,8 +14,7 @@
 {%endfor%}
 <form class="medium-9 columns" action="/updateShow" method="post">
     <h3 class="header">Update Shows</h3>
-    <input placeholder="Show Title" name="show">
-    <input placeholder="Episode Title" name="title">
+    <input placeholder="Show Title" name="title">
     <input placeholder="Season Number" name="season">
     <input placeholder="Episode Number" name="episode">
     <br>
