--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -1,5 +1,6 @@
 {%include 'nav.html'%}
-<body>
+<body style="background-color: #f4eade;">
+<div>
 <h3 class="header">News Feed</h3>
 {%for show in showdata|sort%}
 <form class="medium-6 columns bubble feed" action="/comment" method="post">
