progress bar v1 complete

--- a/templates/addUserform.html
+++ b/templates/addUserform.html
@@ -1,6 +1,6 @@
 {%include 'nav.html'%}
 <h2 class="header">New User</h2>
-<form action="/addAdmin" method="post">
+<form action="/addUser" method="post">
     Username: <input type="text" name="newUser" style="margin:5px;">
     <br>
     Password: <input type="text" name="newPassword" style="margin:5px">
