--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
 </head>
-<body style="background-color: #f4eade;">
+<body>
     <div class="large-12 columns">
         <div class="medium-3 columns wrapper">
             <h2 class="header">Login</h2>
@@ -27,18 +27,5 @@
             <p>Spoiler Watch is a site where you and your friends manage a list of shows that you follow, allowing you to see your own and others progress in a television series.</p>
         </div>
     </div>
-    <div class="large-3 columns">
-        <h2 class="header">Admin Login</h2>
-        <form action="/checkAdminLogin" method="post">
-            Username: <input type="text" name="adminUser" style="margin:5px">
-            <br>
-            Password: <input type="password" name="adminPassword" style="margin:5px">
-            <br>
-            <input class="submit" type="submit" style="margin:5px">
-        </form>
-        <h2 class="header">Admin Registration</h2>
-        <a class="submit" href="/newAdmin">Register</a>
-    </div>
-</body>
-</html>
+
 
