--- a/templates/profilePage.html
+++ b/templates/profilePage.html
@@ -5,4 +5,6 @@
 <p>Season: {{data['Season']}}</p>
 
 <p>Episode: {{data['Episode']}}</p>
+
+<p>Episodes: {{newVar['Episodes']}}</p>
 <p>---Added!</p>
