--- a/templates/shows.html
+++ b/templates/shows.html
@@ -1,27 +1,41 @@
 {%include 'nav.html'%}
+
+
+
 <h3 class="header">Last Episodes Watched:</h3>
-{%for show in showdata%}
-<form class="medium-3 columns bubble" action="/deleteShow" method="post">
-    <br>
-    <h4 style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
-    <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
-    <p style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
-    <p style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
-    <input name="random" style="display:none;" value="{{show[0]}}">
-    <input class="submit" type="submit" value="Delete">
-</form>
 
-{%endfor%}
-<form class="medium-9 columns" action="/updateShow" method="post">
-    <h3 class="header">Update Shows</h3>
-    <input placeholder="Show Title" name="title">
-    <input placeholder="Season Number" name="season">
-    <input placeholder="Episode Number" name="episode">
-    <br>
-    <input class="submit" type="submit" style="margin:15px" value="Update Show">
-</form>
 
-<div class="radial-progress" data-progress="0">
+
+
+<div class="alignContainer">
+{%for show in showdata %}
+
+
+
+     <script type="text/javascript">
+
+          $(function(){
+              var currentEpisode = {{show[3]}};
+               var maxEpisodes = {{show[4]}};
+               var showProgress = currentEpisode / maxEpisodes * 100;
+
+                $('.radial-progress').attr('data-progress', Math.floor(showProgress));
+    });
+    </script>
+
+
+
+
+
+  <form class="medium-3 columns bubble" action="/deleteShow" method="post">
+    <br>
+    <h4>{{show[0]}}</h4>
+    <h5>"{{show[1]}}"</h5>
+    <p id="seasonTitle">Season: {{show[2]}}</p>
+    <p>Episode: {{show[3]}}</p>
+    <p>Max Ep: {{show[4]}}</p>
+
+    <div class="radial-progress" data-progress="0">
 	<div class="circle">
 		<div class="mask full">
 			<div class="fill"></div>
@@ -38,4 +52,29 @@
 		</div>
 	</div>
 </div>
+    <input name="random" style="display:none;" value="{{show[0]}}">
+    <input class="submit" type="submit" value="Delete">
+</form>
+
+
+
+{%endfor%}
+
+</div>
+
+
+
+
+
+
+
+
+<form class="medium-9 columns" action="/updateShow" method="post">
+    <h3 class="header">Update Shows</h3>
+    <input placeholder="Show Title" name="title">
+    <input placeholder="Season Number" name="season">
+    <input placeholder="Episode Number" name="episode">
+    <br>
+    <input class="submit" type="submit" style="margin:15px" value="Update Show">
+</form>
 
