--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -1,5 +1,5 @@
 {%include 'nav.html'%}
-<body style="background-color: #f4eade;">
+<body>
 <div>
 <h3 class="header">News Feed</h3>
 {%for show in showdata|sort%}
@@ -11,17 +11,6 @@
     <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
     <p style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
     <p style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
-    <input name="comment">
-    <input type="submit">
 </form>
 
 {%endfor%}
-
-<form class="medium-6 columns" action="/fileComplaint">
-    <h4 class="header">Submit Problem</h4>
-    <br>
-    <input value="Report a problem you have found..." type="text" name="complaint" style="margin:5px">
-    <br>
-    <button class="submit" type="submit">Submit</button>
-</form>
-</body>
