--- a/templates/badges.html
+++ b/templates/badges.html
@@ -1,13 +1,5 @@
 {%include 'nav.html'%}
 
-
-
-<h3 class="header">Last Episodes Watched:</h3>
-
-
-
-
-<div class="alignContainer">
 {%for show in showdata %}
 
 
@@ -19,27 +11,28 @@
                var maxEpisodes = {{show[4]}};
                var showProgress = currentEpisode / maxEpisodes * 100;
 
+
+
                 $('.radial-progress').attr('data-progress', Math.floor(showProgress));
     });
+
+
+    </script>
+    <script type="text/javascript">
+
     </script>
 
 
 
 
 
-  <form class="medium-3 columns bubble" action="/badges" method="post">
+  <form class="medium-3 columns bubble" action="deleteShow" method="post">
     <br>
     <h4>{{show[0]}}</h4>
     <h5>"{{show[1]}}"</h5>
     <p id="seasonTitle">Season: {{show[2]}}</p>
     <p>Episode: {{show[3]}}</p>
-    <p>Total Season Episodes: {{show[4]}}</p>
-      <input name="showName" style="display:none;" value="{{show[0]}}">
-      <input name="season" style="display:none;" value="{{show[2]}}">
-      <input name="currentEpisode" style="display:none;" value="{{show[3]}}">
-      <input name="lastEpisode" style="display:none;" value="{{show[4]}}">
-
-
+    <p>Max Ep: {{show[4]}}</p>
 
     <div class="radial-progress" data-progress="0">
 	<div class="circle">
@@ -59,28 +52,12 @@
 	</div>
 </div>
     <input name="random" style="display:none;" value="{{show[0]}}">
-    <input class="submit" type="submit" value="View Show Info">
+    <input class="submit" type="submit" value="Delete">
 </form>
 
 
 
 {%endfor%}
 
-</div>
-
-
-
-
-
-
-
-
-<form class="medium-9 columns" action="/updateShow" method="post">
-    <h3 class="header">Update Shows</h3>
-    <input placeholder="Show Title" name="title">
-    <input placeholder="Season Number" name="season">
-    <input placeholder="Episode Number" name="episode">
-    <br>
-    <input class="submit" type="submit" style="margin:15px" value="Update Show">
-</form>
-
+<h3>Show Badges</h3>
+<div class="row"></div>
