--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,12 @@
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
 </head>
 <body>
+<nav>
+             <ul class="topnav">
+           <li><a class="header" id="sw" href="/login">Spoiler Watch</a></li>
+        </ul>
+
+        </nav>
     <div class="large-12 columns">
         <div class="medium-3 columns wrapper">
             <h2 class="header">Login</h2>
