--- a/templates/nav.html
+++ b/templates/nav.html
@@ -120,7 +120,7 @@
 	<body class="columns">
         <nav>
              <ul class="topnav">
-           <li><a id="sw" href="/home">Spoiler Watch</a></li>
+           <li><a class="header" id="sw" href="/home">Spoiler Watch</a></li>
            <li><a href="/friendForm">Add Friends</a></li>
            <li><a href="/friends">Friends List</a></li>
            <li><a href="/shows">My Shows</a></li>
