--- a/templates/profilePage.html
+++ b/templates/profilePage.html
@@ -1,10 +1,9 @@
 {%include 'nav.html'%}
 <br>
-<p>Title:{{data['Title']}}</p>
+<p class="showContent">Title:{{data['Title']}}</p>
 
-<p>Season: {{data['Season']}}</p>
+<p class="showContent">Season: {{data['Season']}}</p>
 
-<p>Episode: {{data['Episode']}}</p>
+<p class="showContent">Episode: {{data['Episode']}}</p>
 
-<p>Episodes: {{newVar['Episodes']}}</p>
-<p>---Added!</p>
+<p class="showContent">---Added!</p>
