--- a/templates/badges.html
+++ b/templates/badges.html
@@ -26,13 +26,13 @@
 
 
 
-  <form class="medium-3 columns bubble" action="deleteShow" method="post">
+  <form class="medium-3 columns badgeForm" action="deleteShow" method="post">
     <br>
-    <h4>{{show[0]}}</h4>
-    <h5>"{{show[1]}}"</h5>
-    <p id="seasonTitle">Season: {{show[2]}}</p>
-    <p>Episode: {{show[3]}}</p>
-    <p>Max Ep: {{show[4]}}</p>
+    <h4 class="showContent">{{show[0]}}</h4>
+    <h5 class="showContent">"{{show[1]}}"</h5>
+    <p class="showContent" id="seasonTitle">Season: {{show[2]}}</p>
+    <p class="showContent">Episode: {{show[3]}}</p>
+    <p class="showContent">Max Ep: {{show[4]}}</p>
 
     <div class="radial-progress" data-progress="0">
 	<div class="circle">
@@ -52,14 +52,14 @@
 	</div>
 </div>
     <input name="random" style="display:none;" value="{{show[0]}}">
-    <input class="submit" type="submit" value="Delete">
+    <input class="submit" type="submit" value="Delete Show">
 </form>
 
 
 
 {%endfor%}
 
-<h3>Show Badges</h3>
+<h3>Badges</h3>
 {%for badge in badgeData %}
 <div class="badge"><p class="badgeText">{{badge[1]}}</p></div>
 
