--- a/templates/shows.html
+++ b/templates/shows.html
@@ -1,13 +1,24 @@
 {%include 'nav.html'%}
 
 
+<form class="medium-12 columns" action="/updateShow" method="post">
+    <h3 class="header">Update Shows</h3>
+    <input placeholder="Show Title" name="title">
+    <input placeholder="Season Number" name="season">
+    <input placeholder="Episode Number" name="episode">
+    <br>
+    <input id="update" class="submit" type="submit" value="Update Show">
+
+</form>
+
+
 
 <h3 class="header">Last Episodes Watched:</h3>
 
 
 
 
-<div class="alignContainer">
+<div>
 {%for show in showdata %}
 
 
@@ -29,11 +40,11 @@
 
   <form class="medium-3 columns bubble" action="/badges" method="post">
     <br>
-    <h4>{{show[0]}}</h4>
-    <h5>"{{show[1]}}"</h5>
-    <p id="seasonTitle">Season: {{show[2]}}</p>
-    <p>Episode: {{show[3]}}</p>
-    <p>Total Season Episodes: {{show[4]}}</p>
+    <h4 class="showContent">{{show[0]}}</h4>
+    <h5 class="showContent" >"{{show[1]}}"</h5>
+    <p class="showContent" id="seasonTitle">Season: {{show[2]}}</p>
+    <p class="showContent">Episode: {{show[3]}}</p>
+    <p class="showContent">Total Season Episodes: {{show[4]}}</p>
       <input name="showName" style="display:none;" value="{{show[0]}}">
       <input name="season" style="display:none;" value="{{show[2]}}">
       <input name="currentEpisode" style="display:none;" value="{{show[3]}}">
@@ -41,23 +52,23 @@
 
 
 
-    <div class="radial-progress" data-progress="0">
-	<div class="circle">
-		<div class="mask full">
-			<div class="fill"></div>
-		</div>
-		<div class="mask half">
-			<div class="fill"></div>
-			<div class="fill fix"></div>
-		</div>
-		<div class="shadow"></div>
-	</div>
-	<div class="inset">
-		<div class="percentage">
-			<div class="numbers"><span>-</span><span>0%</span><span>1%</span><span>2%</span><span>3%</span><span>4%</span><span>5%</span><span>6%</span><span>7%</span><span>8%</span><span>9%</span><span>10%</span><span>11%</span><span>12%</span><span>13%</span><span>14%</span><span>15%</span><span>16%</span><span>17%</span><span>18%</span><span>19%</span><span>20%</span><span>21%</span><span>22%</span><span>23%</span><span>24%</span><span>25%</span><span>26%</span><span>27%</span><span>28%</span><span>29%</span><span>30%</span><span>31%</span><span>32%</span><span>33%</span><span>34%</span><span>35%</span><span>36%</span><span>37%</span><span>38%</span><span>39%</span><span>40%</span><span>41%</span><span>42%</span><span>43%</span><span>44%</span><span>45%</span><span>46%</span><span>47%</span><span>48%</span><span>49%</span><span>50%</span><span>51%</span><span>52%</span><span>53%</span><span>54%</span><span>55%</span><span>56%</span><span>57%</span><span>58%</span><span>59%</span><span>60%</span><span>61%</span><span>62%</span><span>63%</span><span>64%</span><span>65%</span><span>66%</span><span>67%</span><span>68%</span><span>69%</span><span>70%</span><span>71%</span><span>72%</span><span>73%</span><span>74%</span><span>75%</span><span>76%</span><span>77%</span><span>78%</span><span>79%</span><span>80%</span><span>81%</span><span>82%</span><span>83%</span><span>84%</span><span>85%</span><span>86%</span><span>87%</span><span>88%</span><span>89%</span><span>90%</span><span>91%</span><span>92%</span><span>93%</span><span>94%</span><span>95%</span><span>96%</span><span>97%</span><span>98%</span><span>99%</span><span>100%</span></div>
-		</div>
-	</div>
-</div>
+    <!--<div class="radial-progress" data-progress="0">-->
+	<!--<div class="circle">-->
+		<!--<div class="mask full">-->
+			<!--<div class="fill"></div>-->
+		<!--</div>-->
+		<!--<div class="mask half">-->
+			<!--<div class="fill"></div>-->
+			<!--<div class="fill fix"></div>-->
+		<!--</div>-->
+		<!--<div class="shadow"></div>-->
+	<!--</div>-->
+	<!--<div class="inset">-->
+		<!--<div class="percentage">-->
+			<!--<div class="numbers"><span>-</span><span>0%</span><span>1%</span><span>2%</span><span>3%</span><span>4%</span><span>5%</span><span>6%</span><span>7%</span><span>8%</span><span>9%</span><span>10%</span><span>11%</span><span>12%</span><span>13%</span><span>14%</span><span>15%</span><span>16%</span><span>17%</span><span>18%</span><span>19%</span><span>20%</span><span>21%</span><span>22%</span><span>23%</span><span>24%</span><span>25%</span><span>26%</span><span>27%</span><span>28%</span><span>29%</span><span>30%</span><span>31%</span><span>32%</span><span>33%</span><span>34%</span><span>35%</span><span>36%</span><span>37%</span><span>38%</span><span>39%</span><span>40%</span><span>41%</span><span>42%</span><span>43%</span><span>44%</span><span>45%</span><span>46%</span><span>47%</span><span>48%</span><span>49%</span><span>50%</span><span>51%</span><span>52%</span><span>53%</span><span>54%</span><span>55%</span><span>56%</span><span>57%</span><span>58%</span><span>59%</span><span>60%</span><span>61%</span><span>62%</span><span>63%</span><span>64%</span><span>65%</span><span>66%</span><span>67%</span><span>68%</span><span>69%</span><span>70%</span><span>71%</span><span>72%</span><span>73%</span><span>74%</span><span>75%</span><span>76%</span><span>77%</span><span>78%</span><span>79%</span><span>80%</span><span>81%</span><span>82%</span><span>83%</span><span>84%</span><span>85%</span><span>86%</span><span>87%</span><span>88%</span><span>89%</span><span>90%</span><span>91%</span><span>92%</span><span>93%</span><span>94%</span><span>95%</span><span>96%</span><span>97%</span><span>98%</span><span>99%</span><span>100%</span></div>-->
+		<!--</div>-->
+	<!--</div>-->
+<!--</div>-->
     <input name="random" style="display:none;" value="{{show[0]}}">
     <input class="submit" type="submit" value="View Show Info">
 </form>
@@ -75,12 +86,4 @@
 
 
 
-<form class="medium-9 columns" action="/updateShow" method="post">
-    <h3 class="header">Update Shows</h3>
-    <input placeholder="Show Title" name="title">
-    <input placeholder="Season Number" name="season">
-    <input placeholder="Episode Number" name="episode">
-    <br>
-    <input class="submit" type="submit" style="margin:15px" value="Update Show">
-</form>
 
