--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -2,15 +2,15 @@
 <body>
 <div>
 <h3 class="header">News Feed</h3>
-{%for show in showdata|sort%}
-<form class="medium-6 columns bubble feed" action="/comment" method="post">
+{%for show in showdata|sort %}
+<form class="medium-6 columns feed" action="/comment" method="post">
     <br>
-    <p style="margin-right:500px">{{show[5]}}</p>
-    <h4 style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
-    <h5 style="margin-top:10px;font-weight:bold;">{{show[4]}}</h5>
-    <h5 style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
-    <p style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
-    <p style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
+    <p class="showContent" style="margin-right:500px">{{show[5]}}</p>
+    <h4 class="showContent" style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
+    <h5 class="showContent" style="margin-top:10px;font-weight:bold;">{{show[4]}}</h5>
+    <h5 class="showContent" style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
+    <p class="showContent" style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
+    <p class="showContent" style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
 </form>
 
 {%endfor%}
