Show all badges page

--- a/templates/badges.html
+++ b/templates/badges.html
@@ -58,7 +58,7 @@
 
 {%endfor%}
 
-<h3>Badges</h3>
+<h3 class="header">Badges</h3>
 {%for badge in badgeData %}
 <div class="medium-12 columns badge"><p class="badgeText">{{badge[1]}}</p></div>
 
