--- a/templates/nav.html
+++ b/templates/nav.html
@@ -125,6 +125,7 @@
            <li><a href="/friends">Friends List</a></li>
            <li><a href="/shows">My Shows</a></li>
            <li><a href="/showSearch">Add Shows</a></li>
+           <li><a href="/allBadges">Badges</a></li>
            <li><a id="logout" href="/logout">Logout</a></li>
            <li class="icon">
                <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
