--- a/templates/addFriend.html
+++ b/templates/addFriend.html
@@ -1,9 +1,9 @@
 {%include 'nav.html'%}
 <h3 class="header">Follow Friend</h3>
 <form class="medium-3 columns" action="/addFriend" method="post">
-    <input placeholder="Friend Username" type="text" name="Addfriend" style="margin:5px">
+    <input id="findFriendInput" placeholder="Friend Username" type="text" name="Addfriend" style="margin:5px">
     <br>
-    <input value="+ Follow" class="submit" type="submit">
+    <input value="+ Follow" id="addFriendButton" class="submit" type="submit">
 </form>
 
 
