--- a/templates/friends.html
+++ b/templates/friends.html
@@ -5,7 +5,7 @@
     <br>
     <p>{{data[1]}}</p>
     <br>
-    <input class="submit" type="submit" value="See Shows">
+    <input class="submit" id="seeFriendShows"  type="submit" value="See Shows">
     <input name="friend" style="display:none;" value="{{data[1]}}">
     <br>
 </form>
