--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -5,6 +5,6 @@
     <input placeholder="Season" name="season">
     <input placeholder="Episode" name="episode">
     <br>
-    <input class="submit" type="submit" style="margin:15px" value="Add Show">
+    <input id="searchSubmit" class="submit" type="submit" style="margin:15px" value="Add Show">
 </form>
 
