--- a/templates/profilePage.html
+++ b/templates/profilePage.html
@@ -1,9 +1,12 @@
 {%include 'nav.html'%}
 <br>
-<p class="showContent">Title:{{data['Title']}}</p>
+<div id="showAdded">
+    <p class="showContent">Episode Title: {{data['Title']}}</p>
 
-<p class="showContent">Season: {{data['Season']}}</p>
+    <p class="showContent">Season: {{data['Season']}}</p>
 
-<p class="showContent">Episode: {{data['Episode']}}</p>
+    <p class="showContent">Episode: {{data['Episode']}}</p>
 
-<p class="showContent">---Added!</p>
+    <p class="showContent" style="font-weight:bold;">---Added!</p>
+
+</div>
