--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,5 +1,6 @@
 {%include 'nav.html'%}
 <h3 class="header">Friends List</h3>
+<a href="/manageFriends">Friend Management</a>
 {%for data in data%}
 <form class="friendBubble medium-2 columns" action="/friendData" method="post">
     <br>
