--- a/static/styles.css
+++ b/static/styles.css
@@ -78,6 +78,12 @@ ul.topnav li a {
 
 }
 
+#deleteConf{
+    margin-left: 40%;
+    margin-top: 5%;
+    color: #617799;
+}
+
 .friendBubble{
     background-color: #c7c7c7;
     border-radius: 6px;
