--- a/templates/movieNav.html
+++ b/templates/movieNav.html
@@ -3,7 +3,7 @@
 	<head>
         <link href='http://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
-        <link href="../../static/styles.css" rel="stylesheet">
+        <link href="../../static/movieStyles.css" rel="stylesheet">
         <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
@@ -123,10 +123,10 @@
            <li><a class="header" id="sw" href="/home">Spoiler Watch</a></li>
            <li><a href="/friendForm">Add Friends</a></li>
            <li><a href="/friends">Friends List</a></li>
-           <li><a href="/shows">My Shows</a></li>
-           <li><a href="/showSearch">Add Shows</a></li>
+           <li><a href="/movies">My Movies</a></li>
+           <li><a href="/addMovies">Add Movies</a></li>
            <li><a href="/allBadges">Badges</a></li>
-           <li><a href="/movieToggle">MOVIES</a></li>
+           <li><a href="/home">TV</a></li>
            <li><a id="logout" href="/logout">Logout</a></li>
            <li class="icon">
                <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
