--- a/templates/friendData.html
+++ b/templates/friendData.html
@@ -1,9 +1,9 @@
 {%include 'nav.html'%}
-<h3 class="medium-5 columns header">Last Episodes Watched:</h3>
-<h3 class="medium-5 columns header">All Badges</h3>
+<h3 class="medium-12 columns header">Shows</h3>
+
 {%for show in data%}
-<br>
-<div class="medium-5 columns friendShow">
+
+<div class="medium-12 columns friendShow">
     <h4>{{show[0]}}</h4>
     <h5>"{{show[1]}}"</h5>
     <p>Season:{{show[2]}}</p>
@@ -11,10 +11,10 @@
 </div>
 {%endfor%}
 
-
-
+<h3 class="medium-12 columns header">All Badges</h3>
+<br>
 {%for badge in badgeData %}
-<div class="medium-5 columns badge"><p class="badgeText">{{badge[0]}}</p></div>
+<div class="medium-12 columns badge"><p class="badgeText">{{badge[0]}}</p></div>
 
 
 
