--- a/templates/login.html
+++ b/templates/login.html
@@ -29,12 +29,7 @@
             <a style="font-size:25px" href="/newUser">Sign Up Now!</a>
             </div>
             <div class="medium-8 columns">
-            <h2 class="header">What is Spoiler Watch?</h2>
-            <p>Spoiler Watch is a site where you and your friends manage a list of shows that you follow, allowing you to see your own and others progress in a television series.</p>
-        </div>
     </div>
-
-<div class="footer medium-12 columns"></div>
-
-
+            <img src="../static/images/swInfographic.png" alt="intro infographic"/>
+    </div>
 
