--- a/templates/movieNav.html
+++ b/templates/movieNav.html
@@ -126,7 +126,6 @@
            <li><a href="/movies">My Movies</a></li>
            <li><a href="/addMovies">Add Movies</a></li>
            <li><a href="/allBadges">Badges</a></li>
-           <li><a href="/home">TV</a></li>
            <li><a id="logout" href="/logout">Logout</a></li>
            <li class="icon">
                <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
@@ -134,6 +133,10 @@
         </ul>
 
         </nav>
+        <div class="large-12 columns">
+            <a class="large-6 columns toggle" id="movieToggle" href="/movieToggle">Movies</a>
+            <a class="large-6 columns toggle" href="/home">TV</a>
+        </div>
 
 
 
