--- a/templates/nav.html
+++ b/templates/nav.html
@@ -126,14 +126,18 @@
            <li><a href="/shows">My Shows</a></li>
            <li><a href="/showSearch">Add Shows</a></li>
            <li><a href="/allBadges">Badges</a></li>
-           <li><a href="/movieToggle">MOVIES</a></li>
            <li><a id="logout" href="/logout">Logout</a></li>
            <li class="icon">
                <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
            </li>
         </ul>
-
         </nav>
+        <div class="large-12 columns">
+            <a class="large-6 columns toggle" href="/movieToggle">Movies</a>
+            <a class="large-6 columns toggle" id="tvToggle" href="/home">TV</a>
+        </div>
+
+
 
 
 
