--- a/static/movieStyles.css
+++ b/static/movieStyles.css
@@ -20,24 +20,29 @@ ul.topnav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #242424;
+    background-color: #617799;
 }
 nav{
     width: 100%;
+}
+
+.toggle{
+    border: 1px solid black;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    text-align: center;
+    border-radius: 15px;
+}
+
+#movieToggle{
+    background-color: #617799;
+    color: #f2f2f2;
 }
 
 #logout{
     margin-left: 585%;
 }
 
-.footer{
-    margin: 0px;
-    margin-top: 25px;
-    width: 100%;
-    height: 75px;
-    background-color: #617799;
-
-}
 
 ul.topnav li {float: left;}
 
@@ -130,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header{
-    color: #242424;
+    color: #617799;
     font-family: 'Keep Calm Medium';
     margin: 2%;
 }
